activation: don't activate windows that don't accept keyboard input

It can change the active output without user interaction

BUG: 495537


(cherry picked from commit 71c9fd7bc0b9834966750d28ac69501ad69899f9)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>